--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                         <div class="upload-area" id="uploadArea">
                             <i class="fas fa-cloud-upload-alt"></i>
                             <p>Drag & drop resumes here or <span class="upload-link">browse files</span></p>
-                            <input type="file" id="fileInput" multiple accept=".pdf,.doc,.docx" hidden>
+                            <input type="file" id="fileInput" multiple accept=".pdf" hidden>
                             <div class="supported-formats">Only PDF supported</div>
                         </div>
                         
@@ -192,19 +192,19 @@
             <div class="faq-grid">
                 <div class="faq-item">
                     <h4>Is it secure?</h4>
-                    <p>We use end-to-end encryption while transferring your data and rely on secure payment processing.</p>
+                    <p>We use end-to-end encryption while transferring your data.</p>
                 </div>
                 <div class="faq-item">
                     <h4>What file formats do you support?</h4>
-                    <p>We support PDF, DOC, DOCX resume files. You can also upload a zip archive with multiple resume files.</p>
+                    <p>We only support PDF files for the time being, and will extend to other file types in future.</p>
                 </div>
                 <div class="faq-item">
                     <h4>Can I use this for free?</h4>
-                    <p>Yes, this is a demo application that you can use to test the resume screening functionality.</p>
+                    <p>Yes, this application is still in a demo stage and we will offer a free tier usage once live.</p>
                 </div>
                 <div class="faq-item">
                     <h4>How is my data stored?</h4>
-                    <p>We don't sell your data. We only store resume fingerprints and parsed text for easy retrieval. All data can be deleted from Settings.</p>
+                    <p>We don't sell your data and we don't store your data, as long as a resume is processed, the data is returned to you and we store nothing.</p>
                 </div>
                 <div class="faq-item">
                     <h4>How to screen resumes effectively?</h4>
